# da-text-ui

./: .gitignore  README.md  config_window.py  configure.py  edit_btn_window.py  help_window.py  main.py  main.spec  pyproject.toml  string_action.py
